--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input id="First_Name" placeholder="First Name">
         <input id="Middle_Name" placeholder="Middle Name">
         <input id="Last_Name" placeholder="Last Name">
-
+        <input id="Gender" placeholder="Gender (Male / Female / Other)">
         <!-- email & phone no. -->
         <input id="email" placeholder="E-mail">
         <input id="phone" placeholder="Phone Number">
@@ -40,6 +40,8 @@
 
         <input id="College_Name" placeholder="College_Name">
         <input id="University_Name" placeholder="University_Name">
+
+        
 
         <button id="save">Save</button>
         <button id="fill">Auto Fill</button>
