--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
     </div>
 
         <script src="libs/pdf/pdf.min.js"></script>
-        <script src="popup.js"></script>
+        <script type="module" src="popup.js"></script>
 </body>
 </html>
